hphp/hack/test/typecheck/reactive/rx_superglobals2.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__Rx>>
function f(): void {
  $a = $_SERVER;
}
